<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131739"
    android:backgroundTint="#FFFFFF"
    tools:context=".AddPlanet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="79dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_app"
            android:gravity="end"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/planetImageResource"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/unknown"
                    android:tag="newimage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/planetColor"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/unKnown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/planetImageResource"
                    app:layout_constraintHorizontal_bias="0.175"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.876" />

                <ImageView
                    android:id="@+id/change"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/new_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.956"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.923"
                    app:srcCompat="@drawable/edit_image" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/planetName"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="Planet Name"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/planet_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/fontDesc"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <ImageView
                    android:id="@+id/mic"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="31dp"
                    android:contentDescription="@string/mic"
                    app:srcCompat="@drawable/microphone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/planetDesc1"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="Planet Description"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/planet_description"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/fontDesc" />

                <ImageView
                    android:id="@+id/micDesc"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/mic"
                    app:srcCompat="@drawable/microphone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/planetDesc2"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="Planet More Description"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/planet_more_description"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/fontDesc" />

                <ImageView
                    android:id="@+id/micDesc2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/mic"
                    app:srcCompat="@drawable/microphone" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fixedType"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/textview"
                    android:textColor="@color/fontDesc"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/planetType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:dropDownSelector="@color/desc_font"
                    android:scrollbarThumbHorizontal="@color/desc2_font"
                    android:scrollbarThumbVertical="@color/title_font"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/planetRadius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:autofillHints="Planet Radius"
                    android:ems="5"
                    android:hint="@string/radius"
                    android:inputType="number"
                    android:textColor="@color/title_font"
                    android:textColorHint="@color/fontDesc"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/planetLengthYearAddPlanet"
                    app:layout_constraintStart_toEndOf="@+id/planetType"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/planetLengthYearAddPlanet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="Planet Length of Year in Earth Days"
                    android:hint="@string/length_of_year"
                    android:inputType="number"
                    android:textColor="@color/title_font"
                    android:textColorHint="@color/fontDesc"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>